--- a/DS/linearAlgebra.ipynb
+++ b/DS/linearAlgebra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "       [1.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "       [0, 0, 3]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "       [0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "       [22]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "array([[68]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "32"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "array([[2973.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,30 +255,6 @@
     "x1 = np.array([[10], [100], [1000], [10000]])\n",
     "\n",
     "w.T @ x1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.5"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 벡터의 평균\n",
-    "x2 = np.arange(10)\n",
-    "N = len(x2)\n",
-    "\n",
-    "(np.ones(N) @ x2) / N"
    ]
   },
   {
@@ -299,7 +275,10 @@
    ],
    "source": [
     "# 벡터의 평균\n",
-    "np.mean(x2)"
+    "x2 = np.arange(10)\n",
+    "N = len(x2)\n",
+    "\n",
+    "(np.ones(N) @ x2) / N"
    ]
   },
   {
@@ -310,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-2., -1.,  0.,  1.,  2.])"
+       "4.5"
       ]
      },
      "execution_count": 15,
@@ -319,12 +298,8 @@
     }
    ],
    "source": [
-    "# 평균제거(mean removed) 혹은 0-평균(zero-mean) 벡터\n",
-    "# : 벡터에서 벡터의 평균을 뺀 벡터\n",
-    "x3 = np.array([0, 1, 2, 3, 4])\n",
-    "N = len(x3)\n",
-    "\n",
-    "x3 - ((np.ones(N).T @ x3 * np.ones(N)) / N)"
+    "# 벡터의 평균\n",
+    "np.mean(x2)"
    ]
   },
   {
@@ -344,15 +319,59 @@
     }
    ],
    "source": [
+    "# 평균제거(mean removed) 혹은 0-평균(zero-mean) 벡터\n",
+    "# : 벡터에서 벡터의 평균을 뺀 벡터\n",
+    "x3 = np.array([0, 1, 2, 3, 4])\n",
+    "N = len(x3)\n",
+    "\n",
+    "x3 - ((np.ones(N).T @ x3 * np.ones(N)) / N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2., -1.,  0.,  1.,  2.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "x3 - np.mean(x3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3., 4., 5., 6.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 특정 행렬의 열의 평균으로 이루어진 벡터를 구한다\n",
+    "\n",
+    "x5 = np.array([[3, 4, 5, 6], [3, 4, 5, 6], [3, 4, 5, 6]])\n",
+    "N = x5.shape[0]\n",
+    "mvector = (x5.T @ np.ones(N)) / N\n",
+    "\n",
+    "mvector"
+   ]
   }
  ],
  "metadata": {
