--- a/DS/linearAlgebra.ipynb
+++ b/DS/linearAlgebra.ipynb
@@ -211,26 +211,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32"
+       "array([[32]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# dot product with one dimension arrays (벡터 내적)\n",
-    "vx1 = np.array([1, 2, 3])\n",
-    "vy1 = np.array([4, 5, 6])\n",
+    "vx1 = np.array([[1], [2], [3]])\n",
+    "vy1 = np.array([[4], [5], [6]])\n",
     "\n",
-    "vx1 @ vy1"
+    "vx1.T @ vy1"
    ]
   },
   {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "array([3., 4., 5., 6.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,6 +372,179 @@
     "\n",
     "mvector"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1],\n",
+       "       [1, 1, 1],\n",
+       "       [1, 1, 1]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1N @ 1N.T\n",
+    "\n",
+    "N = 3\n",
+    "one = np.array([[1], [1], [1]])\n",
+    "\n",
+    "oneN = one @ one.T\n",
+    "\n",
+    "oneN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3., 4., 5., 6.],\n",
+       "       [3., 4., 5., 6.],\n",
+       "       [3., 4., 5., 6.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 위에있는 mvector(mvector in R(M))가 각 행으로 이루어진(mvector.T) 행렬 (Xbar in R(NxM))\n",
+    "\n",
+    "x = np.array([[3, 4, 5, 6], [3, 4, 5, 6], [3, 4, 5, 6]])\n",
+    "one = np.array([[1], [1], [1]])\n",
+    "oneN = one @ one.T\n",
+    "\n",
+    "Xbar = (oneN @ x) / 3\n",
+    "\n",
+    "Xbar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4, 7],\n",
+       "       [2, 5, 8],\n",
+       "       [3, 6, 9]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# vector matrix\n",
+    "\n",
+    "v1 = np.array([[1], [2], [3]])\n",
+    "v2 = np.array([[4], [5], [6]])\n",
+    "v3 = np.array([[7], [8], [9]])\n",
+    "\n",
+    "vectorMatrix = np.column_stack([v1, v2, v3])\n",
+    "\n",
+    "vectorMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[30],\n",
+       "       [36],\n",
+       "       [42]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# linear combination\n",
+    "\n",
+    "w = np.array([[1], [2], [3]])\n",
+    "\n",
+    "vectorMatrix @ w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5],\n",
+       "       [1. ],\n",
+       "       [1.5]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1 = 0.5\n",
+    "\n",
+    "vectorMatrix @ np.array([[lambda1], [0], [0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.6],\n",
+       "       [8.1]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 여러 벡터에 대한 가중합 동시 계산\n",
+    "\n",
+    "x1 = np.array([[1], [2], [3]])\n",
+    "x2 = np.array([[4], [5], [6]])\n",
+    "w = np.array([[0.2], [0.5], [0.8]])\n",
+    "\n",
+    "np.vstack([x1.T, x2.T]) @ w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
